--- a/ChangeLog
+++ b/ChangeLog
@@ -12,3 +12,9 @@ Wiki Plugin - scatter
   date: 2014-01-08
   changes:
     - Migrated to fedwiki GitHub organization
+
+0.1.2
+  date: 2014-06-01
+  changes:
+    - Add about page
+    - Update devDependencies
